--- a/OrderExpressApp/app/src/main/res/layout/activity_cadastrar_produto.xml
+++ b/OrderExpressApp/app/src/main/res/layout/activity_cadastrar_produto.xml
@@ -93,6 +93,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
+            android:visibility="gone"
             android:backgroundTint="@color/vermelho"
             android:text="Excluir Produto" />
 
@@ -102,6 +103,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
+            android:visibility="gone"
             android:text="Alterar Produto" />
 
         <Button
