--- a/OrderExpressApp/app/src/main/res/layout/activity_main.xml
+++ b/OrderExpressApp/app/src/main/res/layout/activity_main.xml
@@ -80,7 +80,7 @@
         android:layout_marginBottom="16dp"
         android:backgroundTint="@color/cor_logo_preta"
         android:drawableTop="@drawable/ic_produtos"
-        android:text="Meus Produtos"
+        android:text="Produto"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
