--- a/OrderExpressApp/app/src/main/res/layout/activity_cadastrar_produto.xml
+++ b/OrderExpressApp/app/src/main/res/layout/activity_cadastrar_produto.xml
@@ -63,7 +63,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
-                android:hint="Quantidade"
+                android:hint="Estoque"
                 android:inputType="number|numberDecimal" />
         </com.google.android.material.textfield.TextInputLayout>
 
