--- a/OrderExpressApp/app/src/main/res/layout/activity_cadastrar_cliente.xml
+++ b/OrderExpressApp/app/src/main/res/layout/activity_cadastrar_cliente.xml
@@ -63,7 +63,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
-                android:hint="CNPJ" />
+                android:hint="CNPJ"
+                android:inputType="number" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
