--- a/OrderExpressApp/app/src/main/res/layout/activity_login.xml
+++ b/OrderExpressApp/app/src/main/res/layout/activity_login.xml
@@ -44,7 +44,7 @@
         android:drawablePadding="5dp"
         android:ems="10"
         android:hint="E-mail"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
