--- a/OrderExpressApp/app/src/main/res/layout/fragment_itens_pedido2.xml
+++ b/OrderExpressApp/app/src/main/res/layout/fragment_itens_pedido2.xml
@@ -32,4 +32,31 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/recyclerProdutos" />
+
+    <TextView
+        android:id="@+id/textAvisoErro"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:text="Não foi possível encontrar seus produtos. Cadastre um produto ou tente novamente mais tarde"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageAvisoErro" />
+
+    <ImageView
+        android:id="@+id/imageAvisoErro"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/recyclerProdutos"
+        app:srcCompat="@drawable/imagemcarrinho" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
